--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <p>Hi! I am a fourth-year undergraduate student majoring in statistics at <a href="https://www.hdu.edu.cn/" target="_blank" class="custom-link">Hangzhou Dianzi University</a> (I have completed thesis defense and will graduate soon). During my undergraduate studies, I have studied statistics-related courses and learned some operations research, stochastic processes, and optimization methods.</p>
                         <p>I have not yet found a graduate supervisor o(〒﹏〒)o</p>
                         <p>Hi！我是杭州电子科技大学统计学专业的应届毕业生（已经完成了论文答辩，即将毕业）在本科期间，我学习过统计学相关课程，了解一些运筹学、随机过程和最优化方法 > <</p>
-                        <p>我目前还没有找到研究生导师 o(〒﹏〒)o</p>
+                        <p>目前还没有任何研究生导师收留我 o(〒﹏〒)o</p>
                         <div class="links">
                             <a href="mailto:danhongnan@gmail.com">Email</a> | 
                             <a href="https://scholar.google.com/citations?user=SGD7zqEAAAAJ&hl" target="_blank">Google Scholar</a> | 
