--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Shan HongNan</title>
+    <title>单宏楠的主页丨ShanHongNan's Homepage</title>
     <meta name="author" content="Shan HongNan">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -113,10 +113,10 @@
             <tbody>
                 <tr>
                     <td class="left-column">
-                        <p>Hi! I am a fourth-year undergraduate student majoring in statistics at <a href="https://www.hdu.edu.cn/" target="_blank" class="custom-link">Hangzhou Dianzi University</a> (I have completed thesis defense and will graduate soon). During my undergraduate studies, I have studied statistics-related courses and learned some operations research, stochastic processes, and optimization methods.</p>
-                        <p>I have not yet found a graduate supervisor o(〒﹏〒)o</p>
-                        <p>Hi！我是杭州电子科技大学统计学专业的应届毕业生（已经完成了论文答辩，即将毕业）在本科期间，我学习过统计学相关课程，了解一些运筹学、随机过程和最优化方法 > <</p>
-                        <p>目前还没有任何研究生导师收留我 o(〒﹏〒)o</p>
+                        <p>I am a fourth-year undergraduate student majoring in statistics at <a href="https://www.hdu.edu.cn/" target="_blank" class="custom-link">Hangzhou Dianzi University</a> (I have completed thesis defense and will graduate soon). During my undergraduate studies, I have studied statistics-related courses and learned some operations research, stochastic processes, and optimization methods. In September I will be enrolled in the School of Artificial Intelligence at Beijing Normal University.</p>
+                        <p>This blog is mainly to record notes about daily life and study ^_^</p>
+                        <p>Hi~我是杭州电子科技大学统计学专业的应届毕业生（已经完成了论文答辩，即将毕业）在本科期间，我学习过统计学相关课程，了解一些运筹学、随机过程和最优化方法。九月份我将入学北京师范大学AI院 :)</p>
+                        <p>本网页主要记录一些生活与学习方面的笔记 ^_^</p>
                         <div class="links">
                             <a href="mailto:danhongnan@gmail.com">Email</a> | 
                             <a href="https://scholar.google.com/citations?user=SGD7zqEAAAAJ&hl" target="_blank">Google Scholar</a> | 
@@ -137,7 +137,7 @@
                     <td style="padding:20px;">
                         <heading>📝 Diaries Notes and Sketches</heading>
                         <hr>
-                        <p>[To be added later ω]</p>
+                        <p>[To be added later]</p>
                     </td>
                 </tr>
             </tbody>
