--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>单宏楠的主页丨ShanHongNan's Homepage</title>
-    <meta name="author" content="Shan HongNan">
+    <meta name="author" content="单宏楠, Shan HongNan">
+    <meta name="keywords" content="单宏楠, ShanHongNan">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
