--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         "url": "https://shanhongnan.site/"
         }
     </script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-83HX0FJDKX"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-83HX0FJDKX');
+    </script>
     <style>
         body {
             background-color: #1e262f;
