--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     gtag('js', new Date());
     gtag('config', 'G-83HX0FJDKX');
     </script>
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?569327ead1e8fbd8975aa117993bd4fb";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
     <style>
         body {
             background-color: #1e262f;
