--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
             <tbody>
                 <tr>
                     <td class="left-column">
-                        <p>I am a fourth-year undergraduate student majoring in statistics at <a href="https://www.hdu.edu.cn/" target="_blank" class="custom-link">Hangzhou Dianzi University</a> (I have completed thesis defense and will graduate soon). During my undergraduate studies, I have studied statistics-related courses and learned some operations research, stochastic processes, and optimization methods. In September I will be enrolled in the School of Artificial Intelligence at Beijing Normal University.</p>
+                        <p>I am a fourth-year undergraduate student majoring in statistics at <a href="https://www.hdu.edu.cn/" target="_blank" class="custom-link">Hangzhou Dianzi University</a> (Already completed thesis defense and will graduate soon). During my undergraduate years, I have studied statistics-related courses, which guaranteed me to develop some familiarity with Stochastic Processes and Optimization Theory. In September I will be enrolled in the School of Artificial Intelligence at Beijing Normal University.</p>
                         <p>This blog is mainly to record notes about daily life and study ^_^</p>
-                        <p>Hi~我是杭州电子科技大学统计学专业的应届毕业生（已经完成了论文答辩，即将毕业）在本科期间，我学习过统计学相关课程，了解一些运筹学、随机过程和最优化方法。九月份我将入学北京师范大学AI院 :)</p>
+                        <p>Hi~我是杭州电子科技大学统计学专业的应届毕业生（已经完成论文答辩，即将毕业）在本科期间，我学习过统计学相关课程，了解一些运筹学、随机过程和最优化方法。九月份我将入学北京师范大学AI院 :)</p>
                         <p>本网页主要记录一些生活与学习方面的笔记 ^_^</p>
                         <div class="links">
                             <a href="mailto:danhongnan@gmail.com">Email</a> | 
