--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>单宏楠的主页丨ShanHongNan's Homepage</title>
     <meta name="author" content="单宏楠, Shan HongNan">
     <meta name="keywords" content="单宏楠, ShanHongNan">
+    <meta name="description" content="欢迎访问单宏楠的个人主页。Welcome to ShanHongNan's Homepage for research updates and personal insights.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -131,9 +132,24 @@
             text-align: right;
             font-size: 0.9em;
         }
+        /* Visually Hidden Class for SEO */
+        .visually-hidden {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            margin: -1px;
+            padding: 0;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            white-space: nowrap;
+            border: 0;
+        }
     </style>
 </head>
 <body>
+    <!-- 隐藏但用于SEO的H1标题 -->
+    <h1 class="visually-hidden">单宏楠的个人主页 | ShanHongNan's Homepage</h1>
+
     <div class="container">
         <table class="main-table">
             <tbody>
@@ -150,7 +166,7 @@
                         </div>
                     </td>
                     <td class="right-column">
-                        <img src="Portrait3.jpg" alt="profile photo" class="profile-photo">
+                        <img src="Portrait3.jpg" alt="单宏楠的个人头像" class="profile-photo">
                         <p class="chinese-name">单宏楠</p>
                         <p class="name">Shan HongNan</p>
                     </td>
@@ -174,5 +190,39 @@
             Updated at May, 2025.
         </div>
     </div>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93c787b4fd4bc015',t:'MTc0NjY5MjM0NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+<script>
+(function(){
+    function c(){
+        var b = a.contentDocument || a.contentWindow.document;
+        if(b){
+            var d = b.createElement('script');
+            d.innerHTML = "window.__CF$cv$params={r:'93c787b4fd4bc015',t:'MTc0NjY5MjM0NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";
+            b.getElementsByTagName('head')[0].appendChild(d);
+        }
+    }
+    if(document.body){
+        var a = document.createElement('iframe');
+        a.height = 1;
+        a.width = 1;
+        a.style.position = 'absolute';
+        a.style.top = 0;
+        a.style.left = 0;
+        a.style.border = 'none';
+        a.style.visibility = 'hidden';
+        document.body.appendChild(a);
+        if('loading' !== document.readyState) c();
+        else if(window.addEventListener) document.addEventListener('DOMContentLoaded', c);
+        else {
+            var e = document.onreadystatechange || function() {};
+            document.onreadystatechange = function(b) {
+                e(b);
+                'loading' !== document.readyState && (document.onreadystatechange = e, c());
+            };
+        }
+    }
+})();
+</script>
+</body>
 </html>
